# CMake Version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

# Build Type
SET(CMAKE_BUILD_TYPE Debug)
# Build Type Option
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-W -g")

# Project
PROJECT(php_password_hashing_udf)
SET(MAJOR_VERSION 0)
SET(MINOR_VERSION 1)
SET(BUILD_VERSION 0)
#SET(REVISION_VERSION 0)

# MySQL header
FIND_PATH(MYSQL_INCLUDES
  mysql.h
  PATHS ${MYSQL_INCLUDE_PATH} /usr/include /usr/include/mysql)

IF(MYSQL_INCLUDES STREQUAL "MYSQL_INCLUDES-NOTFOUND")
  MESSAGE(FATAL_ERROR "mysql header could not found mysql.h\n"
    "OPTION: -DMYSQL_INCLUDE_PATH=path")
ENDIF()

INCLUDE_DIRECTORIES(${MYSQL_INCLUDES})

# PHP Password Hashing
SET(PHP_PASSWORD_HASHING_DIR ${PROJECT_SOURCE_DIR}/src/php-password-hashing/src)
INCLUDE_DIRECTORIES(${PHP_PASSWORD_HASHING_DIR})
SET(SOURCE_PHP_PASSWORD_HASHING
  ${PHP_PASSWORD_HASHING_DIR}/password.c
  ${PHP_PASSWORD_HASHING_DIR}/crypt_blowfish.c)

# Library
SET(LIBNAME php_password_hashing)
ADD_LIBRARY(${LIBNAME} SHARED
  ${PROJECT_SOURCE_DIR}/src/main.c ${SOURCE_PHP_PASSWORD_HASHING})
SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES PREFIX "")

# MySQL config
FIND_PROGRAM(MYSQL_CONFIG mysql_config
  ${MYSQL_CONFIG_PATH} /usr/bin/ /usr/local/bin/)

IF(MYSQL_CONFIG)
  EXEC_PROGRAM(${MYSQL_CONFIG} ARGS --plugindir OUTPUT_VARIABLE MYSQL_PLUGIN_DIR)
  MESSAGE(STATUS "Using mysql-config: ${MYSQL_PLUGIN_DIR}")
  # Install
  INSTALL(TARGETS ${LIBNAME} DESTINATION ${MYSQL_PLUGIN_DIR})
ENDIF()
